menambah resource string untuk tampilan Formulir

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
 <!--    Formulir-->
     <string name="kembali">Kembali</string>
     <string name="submit">Submit</string>
+    <string name="judul_formulir">Formulir Pendaftaran</string>
 
 
 </resources>
